Finished all arts except yellow, prevents overflowing on bigger displays

--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
     @apply px-8 mt-10 text-sm leading-relaxed lg:px-80 md:text-lg;
   }
   .text-title {
-    @apply mb-5 text-lg font-semibold leading-7 lg:leading-10 lg:text-pxl;
+    @apply mb-5 text-lg font-semibold leading-7 lg:leading-10 2xl:leading-8 lg:text-pxl 2xl:text-xl;
   }
 }
 
